--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
+    "node-cron": "^2.0.3",
+    "node-schedule": "^1.3.2",
     "requestify": "^0.2.5"
   }
 }
